Created MongoDB routes
